# starknet-hackathon

./: .gitignore  LICENSE  Makefile  README.md  falcon_test_vectors_n512.cairo  mainnet  requirements.txt  shell.nix
falcon/: README.md  acc  clone.sh  pyproject.toml
moosh_id/: Scarb.toml
moosh_id/src/: addressverifier.cairo  esc_erc20.cairo  escrow.cairo  keyregistry.cairo  lib.cairo
moosh_id/tests/: lib.cairo  registry_tests.cairo  test_dynamic_falcon_inputs.cairo  test_escrow.cairo  test_registration.cairo  test_signature_address_verify.cairo  test_utils.cairo  test_validation.cairo  test_verifier.cairo
moosh_id/tests/inputs/: falcon_test_vectors_n1024.cairo  falcon_test_vectors_n512.cairo
scripts/: app.py  cairo_interactions.py  generate_args.py  generate_inputs.py  generate_test_pks.py  utils.py
scripts/Utils/abi/: moosh_id_ESCToken.compiled_contract_class.json  moosh_id_Escrow.compiled_contract_class.json  moosh_id_FalconPublicKeyRegistry.compiled_contract_class.json  moosh_id_FalconPublicKeyRegistry.contract_class.json  moosh_id_FalconSignatureVerifier.compiled_contract_class.json  moosh_id_FalconSignatureVerifier.contract_class.json
