[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "falcon"
version = "0.1.0"
authors = [
    { name="Thomas Prest", email="thomas.prest@ens.fr" },
]
description = "A Python implementation of the Falcon signature scheme"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[tool.setuptools.packages.find]
where = ["src"] 